upgraded mockito and implicit byetbuddy to work with java 24.